<resources>
    <string name="app_name">ProyectoTSP</string>
    <string name="txt_bienvenida">Learn All</string>
    <string name="txt_inicio">Empezar</string>
    <string name="txt_aprender">Aprender</string>
    <string name="txt_ejemplos">Ejemplos</string>
    <string name="txt_ejercicios">Ejercicios</string>
    <string name="txt_personalizado">Personalizado</string>
    <string name="txt_nuevoCuestionario">Crear un nuevo cuestionario...</string>
    <string name="txt_abrirCuestionario">Borrar un cuestionario</string>
    <string name="txt_EligeunTema">Elige un tema</string>
    <string name="txt_crear">Crear</string>
    <string name="txt_Escogeuntema">Escoge un tema</string>
    <string name="btn_crear">Crear</string>
    <string name="txt_tusmaterias">Tus materias</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="btn_Abrir">Abrir</string>
    <string name="btn_Editar">Editar</string>
    <string name="btn_Borrar">Borrar</string>
    <string name="btn_Terminar">Terminar</string>
    <string name="edt_NombreCuestionario">Nombre Cuestionario</string>
    <string name="edt_InsertarPregunta">Inserte Pregunta</string>
    <string name="edt_InsertarRespuesta">Inserte Respuesta</string>

    <string name="txt_anadetusmaterias">Añade tus materias</string>

    <string name="btn_Siguiente">Siguiente</string>

    <string name="var_extra_temario">0</string>
    <string name="var_extra_temarioEjemplo">1</string>

    <string-array name="arrayTemas">
        <item>Números naturales</item>
        <item>Suma y Resta de números naturales</item>
        <item>Multiplicación de números naturales</item>
        <item>División de números naturales</item>
        <item>Las fracciones</item>
    </string-array>

    <string-array name="arraySubtemas">
        <item>Sistema de numeración.</item>
        <item>Lectura y escritura de números.</item>
        <item>Comparación y ordenación de números.</item>
        <item>La suma.</item>
        <item>La resta.</item>
        <item>Operaciones con paréntesis.</item>
        <item>Multiplicación.</item>
        <item>Propiedades.</item>
        <item>Operaciones combinadas-</item>
        <item>La división.</item>
        <item>Tipo de divisiones.</item>
        <item>Propiedades de la división exacta.</item>
        <item>Las fracciones y sus partes.</item>
        <item>Lectura y escritura.</item>
        <item>Operaciones con fracciones.</item>
    </string-array>
    <string-array name="arraySubtemasEjemplo">
        <item>Sistema de numeración.</item>
        <item>Lectura y escritura de números.</item>
        <item>Comparación y ordenación de números.</item>
        <item>La suma.</item>
        <item>La resta.</item>
        <item>Operaciones con paréntesis.</item>
        <item>Multiplicación.</item>
        <item>Propiedades.</item>
        <item>Operaciones combinadas-</item>
        <item>La división.</item>
        <item>Tipo de divisiones.</item>
        <item>Propiedades de la división exacta.</item>
        <item>Las fracciones y sus partes.</item>
        <item>Lectura y escritura.</item>
        <item>Operaciones con fracciones.</item>
    </string-array>

    <string-array name="arrayCuerpos">
        <item>Es decimal porque diez unidades de un orden forman una unidad del orden inmediato superior.\n10 U = 1 D 10 D = 1C 10C = 1 UM\nEs posicional porque el valor de una cifra depende de su posición en el número.\nLos números los podemos descomponer indicando la suma de sus diferentes órdenes, o bien, la suma del valor posicional de sus cifras.\n2,403,745 = 2 Um + 4 CM + 0 DM + 3 UM + 7 C + 4 D + 5 U\n2,403,745 = 2,000,000 + 400,000 + 3,000 + 700 + 40 + 5</item>
        <item>Para leer o escribir con palabras un número se empieza por la izquierda leyendo o escribiendo:\n- El grupo de los millones.\n- El grupo de los millares.\n- El grupo de las unidades.\nSi algún grupo tiene ceros no se nombra.\n23,204,329 = Veintitrés millones doscientos cuatro mil trescientos veintinueve.\n4,000,207 = Cuatro millones doscientos siete.\n47,002,000 Cuarenta y siete millones dos mil.</item>
        <item>Para ordenar números nos fijamos en:\n-Número de cifras: El número mayor será aquel que tenga más cifras y el menor, el que posea menos.\n-Valor de cada cifra; Si los números poseen el mismo número de cifras, empezando por la izquierda, vamos comparando cifra a cifra hasta que sean distintos y comparamos estos para saber cuál es el mayor. \nPara comparar utilizamos los símbolos: ">" Mayor que,  Menor que e “=” Igual que.</item>
        <item>En la adición entre dos o más números.\nLos números que se suman se llaman sumandos y al resultado suma.\n3(sumando) + 5(sumando) = 8(suma).</item>
        <item>La sustracción es la operación opuesta a la adición.\nLos términos de la diferencia se llaman minuendo, sustraendo y al resultado se le llama diferencia.\n50(minuendo) – 33(sustraendo) = 17(diferencia).</item>
        <item>Se realiza primero la operación del paréntesis y después el resto.\n(230 + 52) – 25 = 282 - 25 = 257.</item>
        <item>Una multiplicación es una suma de varios sumandos iguales.\n15 + 15 + 15 + 15 = 60 ó 15 x 4 = 60\nLos términos de la multiplicación se llaman factores y el resultado, producto.\nLos signos de la multiplicación son (x) y (.).</item>
        <item>Conmutativa: El orden de los factores no altera el producto.\n8 x 6 = 48 ó 6 x 8 = 48\nAsociativa: Podemos agrupar los factores de diversas maneras sin que varíe el resultado.\n2 x ( 6 x 4 ) = ( 2 x 6 ) x 4\nDistributiva: El producto de un número por una suma es igual que la suma de los productos del número por los sumandos. 4 x ( 8 + 3 ) = ( 4 x 8 )+ ( 4 x 3 )\nElemento neutro: Es el 1 ya que cualquier numero multiplicado por 1 da él mismo.</item>
        <item>Si hay paréntesis: Primero las operaciones del paréntesis, después el resto.\nSi no hay paréntesis: Primero multiplicaciones y divisiones, después sumas y restas.</item>
        <item>Dividir es repartir una cantidad en partes iguales.</item>
        <item>Una división es exacta cuando su resto es cero.\nUna división es entera o inexacta cuando su resto no es cero.</item>
        <item>Si el dividendo y el divisor de una división exacta se multiplican o se dividen por el mismo número, el cociente no varía.</item>
        <item>Los términos de una fracción son el numerador y el denominador.\nDenominador: Indica el número de partes iguales en que se divide la unidad.\nNumerador: Indica el número de partes que se toman de la unidad.</item>
        <item>Para leer una fracción, se nombra primero el número que ocupa el numerador, y luego se expresa el denominador.\nCuando el denominador es mayor que 10, se añade la terminación –avo al número del denominador.</item>
        <item>Suma de fracciones de igual denominador: Se suman los numeradores y el denominador se deja igual.\n Resta de fracciones de igual denominador: Se restan los numeradores y el denominador se deja igual.\n Suma y resta de fracciones con distinto denominador: Se buscan fracciones equivalentes con el mismo denominador y se opera </item>
    </string-array>

    <string-array name="arrayCuerposEjemplos">
        <item>Ejemplos de posicionamiento:\n\n\n1.- 575 = 5C + 7D + 5U = 500 + 70 + 5 = 575\n2.- 1547 = 1Um + 5C + 4D + 7U = 1000 + 500 + 40 + 7 = 1547\n3.- 12654 = 1Dm + 2Um + 6C + 5D + 4U = 10000 + 2000 + 600 + 50 + 4 = 12554 </item>
        <item>Ejemplos de lectura y escritura de numeros:\n\n\n1.- 23 = Veintitrés\n2.- 356 = trescientos cincuenta y seis\n3.- 4001 = cuatro mil uno\n4.- 32089 = treinta y dos mil ochenta y nueve\n5.- 1000043 = Un millón cuarenta y trés</item>
        <item>Ejemplos de comparar y ordenar números\n\n\n1.- 454 mayor a 56 ?\nPaso 1: Como 454 posee mayor número de cifras, 454 es mayor a 56 \n\n2.- 356 es mayor a 278 ?\nPaso 1: See tiene igualdad en el número de cifras\nPaso 2: Si se compara el primer número de la primera cifra de izquierda a derecha se tiene que 3 es mayor a 2, por lo tanto 356 es mayor a 278 \n\n3.- 1234 es mayor a 1224? \nPaso 1: See tiene igualdad en el número de cifras\nPaso 2: Si se compara el número de la primera cifra de izquierda a derecha, pero son iguales\nPaso 3: Si se compara la siguiente cifra de izquierda a derecha se tiene que 3 es mayor a 2, por lo tanto 1234 es mayor a 1224  </item>
        <item>Ejemplos de sumas:\n\n1234\n 456\n------\n1690\n\n\n\n324\n765\n-----\n1089\n\n\n\n2345\n1247\n  23\n-------\n3615</item>
        <item>Ejemplos de restas:\n\n589\n376\n-----\n213\n\n\n1049\n  98\n-------\n 951\n\n\n854\n 22\n-----\n832</item>
        <item>Ejemplos con paréntesis:\n\n(8+4)-3=(12)-3=9\n\n7-(6+1)-2=7-(7)-2=-2\n\n(2+1)-8-(2+2)=(3)-8-(4)=9</item>
        <item>Ejemplos con multiplicación:\n\n 45\n  5\n----\n225\n\n 7\n12\n-----\n84\n\n 58\n  4\n----\n232</item>
        <item>Ejemplos de propiedades:\n\nConmutativa\n10*5=5*10=50\n6*4=4*6=24\n\nAsociativa\n(5*8*)*2=5*(8*2)\n (40)*2=5*(16)\n  80=80\n\nDistributiva\n3*(4+5)=(3*4)+(3*5)\n3*(9) = (12)+(15)\n   27=27 </item>
        <item>Ejemplos operaciones combinadas\n\n(3+4)*3=(7)*3=21\n3+4*3=3+12=15\n\n\n(8*4)+3*2=(32)+6=38\n8*4+3*2=32+6=38</item>
        <item>Ejemplos división:\n\n4/2=2\n5/2=2.5\n400/20=5\n45/8=5.625</item>
        <item>Ejemplos tipos división:\n\nExacta:\n12/2=6\n6/1=1\n324/18=18\n\nInexacta:\n6/4=1.5\n14/5=2.8</item>
        <item>Ejemplos propiedades de la division exacta:\n\n28/4=7\n28(2)/4(2)=7\n28(23)/4(23)=7</item>
        <item>Ejemplos de fracciones:\n\n15/23\n6?7\n77/54\n43/65</item>
        <item>Ejemplos de lectura y escritura:\n\n2/5 = dos quintos\n3/4 = tres quartos\n9/13=  nueve tresceavos\n7/8 = siete octavos</item>
        <item>Ejemplos operaciones con fracciones:\n\n5/8 + 3/8 = 8/8 = 1\n\n3/4 + 5/6 = ((18)+(20))/(24) = 19/12\n\n1/10 * 5/3 = 5/30 = 1/6</item>
    </string-array>

    <string name="txt_Aritmetica">Aritmetica</string>
    <string name="txt_Algebra">Algebra</string>
    <string name="txt_Historia">Historia</string>

    <string-array name="Elige_una_materias">
        <item>Aritmetica</item>
        <item>Algebra</item>
        <item>Historia</item>
    </string-array>


    <string-array name="array_Cuestionarios">
        <item>Mate primer parcial</item>
        <item>Economia segundo parcial</item>
        <item>Historia</item>
    </string-array>
    <string name="title_activity_cuestionarios">Cuestionarios</string>
    <string name="title_activity_fragment1">Fragment1</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
